--- a/Telco_Customer_Churn.ipynb
+++ b/Telco_Customer_Churn.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNAbr/bw9mIgV7PuASpX69l",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rayxuan2000/Project/blob/main/Telco_Customer_Churn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -34,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6IGnWG6A5eTQ"
       },
@@ -65,7 +77,7 @@
       "metadata": {
         "id": "La4lvh4v6EPT"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +91,7 @@
       "metadata": {
         "id": "DmgOj2D76e9b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +116,7 @@
         "id": "WmNgoxBqpanq",
         "outputId": "1f9a55c1-fe3f-4800-f57f-f95481ec402d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +488,7 @@
         "id": "mfkjlJknZx3m",
         "outputId": "fcd41ede-f975-4a6e-e5be-b334ad8ced50"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +534,7 @@
         "id": "EqA5S-6G6hwx",
         "outputId": "ca5a4d99-3c9f-4323-b797-5ea0be45ff8d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +584,7 @@
         "id": "YzyhIWCqNVG4",
         "outputId": "99886113-9122-4476-d71d-e57f35e3e35d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +631,7 @@
         "id": "AqRfjiy87CuR",
         "outputId": "8815ce7e-b82d-4b8f-e274-9aa1e1610731"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +679,7 @@
         "id": "q5mmwDINOgFy",
         "outputId": "a565f6c6-8dcc-4a8e-c987-7bc316cf1621"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1051,7 @@
         "id": "0HssPrYV-B34",
         "outputId": "062e78a6-6410-423d-ecf2-7253a647cb37"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1108,7 @@
         "id": "A-65HPTzQarZ",
         "outputId": "efcb55c5-bb07-4034-cb28-ac8ef4e1d56c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1156,7 @@
         "id": "dBHGT5ksQ-qW",
         "outputId": "e4376863-b055-4263-f524-a06f36a8ad6a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1700,7 +1712,7 @@
         "id": "7_yqmNwJQhgq",
         "outputId": "858e9cc3-d9c0-4e99-f8ac-dc51d3c79de6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1737,7 +1749,7 @@
         "id": "_8vW2vmuMXoY",
         "outputId": "23292120-f177-4f54-9c1e-de71492e1135"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1785,7 +1797,7 @@
         "id": "fPvjgaRDNRQU",
         "outputId": "9f7ca80d-87c8-4b4c-bd8c-bdf300ca379f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2025,7 +2037,7 @@
         "id": "kwrKue9zNHpG",
         "outputId": "386d554e-93a2-43db-e5fa-16766a0e20a9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2072,7 +2084,7 @@
         "id": "6yrf1AuNN9wF",
         "outputId": "4c7f8587-ab19-410e-fe1c-458b0fd8f1a2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2132,7 +2144,7 @@
         "id": "daU7lhTVOcTY",
         "outputId": "681b3c14-06f8-4033-af3f-cca744d358ff"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2502,7 +2514,7 @@
       "metadata": {
         "id": "jBOndMlq-97_"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2521,7 +2533,7 @@
         "id": "efRl80KM_J7H",
         "outputId": "eab4e004-b064-45f8-b480-c9396506e604"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2582,7 +2594,7 @@
         "id": "gAYxQAutQQpW",
         "outputId": "04ca9fde-270b-4473-cde8-f49b6b65c6b0"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2648,7 +2660,7 @@
         "id": "omDuaIZB_Zfv",
         "outputId": "33bf94fc-24f7-4fec-bd69-ead770fca369"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2685,7 +2697,7 @@
         "id": "1fnySAr0e_bG",
         "outputId": "2d3d26a2-7a25-40b3-f913-6e21547d1f9f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2731,7 +2743,7 @@
         "id": "qOGQp6YwkyVs",
         "outputId": "8f37bfcd-9df0-4d52-da94-95a20eb3c817"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2764,7 +2776,7 @@
       "metadata": {
         "id": "9t8mlWFJH1Gj"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2780,7 +2792,7 @@
         "id": "QE9zTdYMIuGS",
         "outputId": "0d5d5443-c290-4ad5-d01a-2b5b085dffdf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3127,7 +3139,7 @@
         "id": "ckP9OBLfIwBC",
         "outputId": "2195b821-9b3c-40d3-b3ff-99a204f981e7"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3153,7 +3165,7 @@
         "id": "Go_L5zIiIzLq",
         "outputId": "e443062d-8f22-4b40-a2a7-7e9480d1ad0d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3200,7 +3212,7 @@
         "id": "QAp1VZcUI1SK",
         "outputId": "6bc99056-0484-4888-b1ab-ad731126c7e7"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3250,7 +3262,7 @@
       "metadata": {
         "id": "xovHFLWrI_A7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3265,7 +3277,7 @@
         "id": "l3OWF9WhJIUy",
         "outputId": "a62ffa06-269b-4bcd-9081-26f71d0288d4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3291,7 +3303,7 @@
         "id": "K3s64LQMJKKB",
         "outputId": "74e41495-d2d0-4c4c-bf88-b6dae744dff4"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3322,7 +3334,7 @@
         "id": "BuU9fxFCRVpM",
         "outputId": "f9b86927-b891-400d-d805-ec1099485082"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3349,7 +3361,7 @@
       "metadata": {
         "id": "U6Was14DJLcR"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3367,7 +3379,7 @@
       "metadata": {
         "id": "aHKEDS1iS0xN"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3383,7 +3395,7 @@
         "id": "2vrfmNXbn42K",
         "outputId": "8079d340-b75a-4cd0-d1c7-dc22a3b89903"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3741,7 +3753,7 @@
         "id": "CfiMP6Zyo2xS",
         "outputId": "7be2b020-4087-47c1-98c9-a37745f70cbd"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3766,7 +3778,7 @@
         "id": "-U5m-MbkpLRR",
         "outputId": "bd51c224-8062-488c-92d8-92264adeeb4f"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4114,7 +4126,7 @@
       "metadata": {
         "id": "xPk3nhV9pO3q"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4130,7 +4142,7 @@
         "id": "WQe3ERxKpcv3",
         "outputId": "3f139096-035a-4891-afaa-1055050f36a0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4494,7 +4506,7 @@
       "metadata": {
         "id": "BDVsakl2pgai"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4519,7 +4531,7 @@
         "id": "mN-44f3hplkq",
         "outputId": "b2535c0d-3146-4c43-950d-80abdea8953e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4548,7 +4560,7 @@
         "id": "WZI2GKIOpn3S",
         "outputId": "7c1d6f23-cfd9-4cb1-d3dc-48afcf787247"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4574,7 +4586,7 @@
         "id": "sn8xOEBDprua",
         "outputId": "3a078e31-00a0-4293-bc47-de0257ac395a"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4602,7 +4614,7 @@
         "id": "npaq02vBS0V-",
         "outputId": "ca5a3b05-41e1-4861-e1dd-1054aa810f5b"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4640,7 +4652,7 @@
         "id": "hMPhxmE6W9t8",
         "outputId": "ffda2c27-bb0c-4e15-d81b-96c283435645"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4689,7 +4701,7 @@
       "metadata": {
         "id": "vux50iVdpuEn"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4719,7 +4731,7 @@
         "id": "hkK6FxGGpzPt",
         "outputId": "e05b2cf3-f0a4-442e-d040-3502011437d7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4754,7 +4766,7 @@
         "id": "MnIAjiT0p1Tl",
         "outputId": "04e8c5fb-d64a-45b4-c45b-d90115eaeac5"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4776,7 +4788,7 @@
       "metadata": {
         "id": "P3dikNuhp4Q9"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4791,7 +4803,7 @@
         "id": "uEq5dtlNp7dV",
         "outputId": "21f8c1bc-5317-4008-89a4-0272370c0354"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4813,7 +4825,7 @@
       "metadata": {
         "id": "sn3Ie49oVLmz"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4824,7 +4836,7 @@
       "metadata": {
         "id": "7ObnFpkgp9xy"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4836,7 +4848,7 @@
       "metadata": {
         "id": "Ti3HrajCUJkV"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4855,7 +4867,7 @@
         "id": "MpQuRslmp_Hb",
         "outputId": "f1467845-7cca-4afa-83db-f4d8b7a912db"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4906,7 +4918,7 @@
         "id": "0cWH3BEqqCNS",
         "outputId": "92a48392-0bab-4aa9-8a52-42ecd5b8dcae"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4939,7 +4951,7 @@
         "id": "-tU9CPtfqHUy",
         "outputId": "5a6495e5-a52c-4596-8537-4d3dbce0515a"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4960,7 +4972,7 @@
       "metadata": {
         "id": "pItF2RhRqJ9q"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4975,7 +4987,7 @@
         "id": "pURcop6HqM4B",
         "outputId": "6244aea8-e9dd-4a80-88a6-62ef972a9b17"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4997,7 +5009,7 @@
       "metadata": {
         "id": "1RyLQj4zVar7"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5008,7 +5020,7 @@
       "metadata": {
         "id": "IGOSQB3gqQAh"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5020,7 +5032,7 @@
       "metadata": {
         "id": "f8l35aLUUCri"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5051,7 +5063,7 @@
         },
         "outputId": "eebf6972-a1a2-4aad-d09d-97c192e9f108"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5087,7 +5099,7 @@
         },
         "outputId": "896fd4c4-2786-4aad-c4dc-79fe168aa239"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5110,7 +5122,7 @@
       "metadata": {
         "id": "Osk8D5u3qoMW"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5121,7 +5133,7 @@
       "metadata": {
         "id": "8B6ZeqS5Vv7s"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5132,7 +5144,7 @@
       "metadata": {
         "id": "ypEziincqrxe"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5144,7 +5156,7 @@
       "metadata": {
         "id": "V0Zen35WUoBT"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5160,7 +5172,7 @@
       "metadata": {
         "id": "knB4_JzVlwS9"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5174,7 +5186,7 @@
       "metadata": {
         "id": "KG5LdxMEmPkx"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5196,7 +5208,7 @@
       "metadata": {
         "id": "lA-40vwqibOA"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5215,7 +5227,7 @@
       "metadata": {
         "id": "r9l4Z74mhnCm"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5243,7 +5255,7 @@
         },
         "outputId": "9a5586ff-6e85-4fab-e03d-d6380b82f67e"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5342,7 +5354,7 @@
       "metadata": {
         "id": "xlKHK_GGq0V_"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5357,7 +5369,7 @@
         },
         "outputId": "728d66d6-ee2a-4689-915c-dabba80e12e8"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5398,7 +5410,7 @@
         },
         "outputId": "f45d882a-aa90-4e9b-e4ca-c164c33485e3"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5427,7 +5439,7 @@
         },
         "outputId": "7a20c5d0-205a-4fa4-a3c7-055e81fa5017"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5451,7 +5463,7 @@
       "metadata": {
         "id": "Qy8QRdmTye1u"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5466,7 +5478,7 @@
         },
         "outputId": "14cb6956-30ce-40ee-e427-f57105668fd6"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5507,7 +5519,7 @@
         },
         "outputId": "364c4312-358b-4a0a-a9b4-0077d06c9170"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5534,7 +5546,7 @@
         },
         "outputId": "8c6c0199-7f03-4f4d-f9bb-baf5b8359c81"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5579,7 +5591,7 @@
         "id": "XU29BiRB8TWU",
         "outputId": "e01dd902-d859-480a-f2ff-a51ed9dba085"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5628,7 +5640,7 @@
         "id": "rnwSCix8-TtR",
         "outputId": "7f1242f9-958f-436f-d256-4030ce9707bd"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
