--- a/Women's_E_Commerce_Clothing_Reviews.ipynb
+++ b/Women's_E_Commerce_Clothing_Reviews.ipynb
@@ -12,7 +12,9 @@
         "sWkk79g03xWU",
         "r3-ex_ph7cPe",
         "zqvKTW8Q7YEU"
-      ]
+      ],
+      "authorship_tag": "ABX9TyMGQxyZeoeGo47qLwrVTU7i",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -25,6 +27,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rayxuan2000/Project/blob/main/Women's_E_Commerce_Clothing_Reviews.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# 1. Set up environment"
       ],
@@ -34,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "r0F0AhSy4hXP"
       },
@@ -77,7 +89,7 @@
       "metadata": {
         "id": "f6C_oBC56jhd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +111,7 @@
         "id": "RJzEC5VP7itM",
         "outputId": "5f6ae6b3-543b-4507-95dd-133acc71c14a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +143,7 @@
       "metadata": {
         "id": "Q0UBpEoBCoLq"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,13 +162,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oaJyxwhQ8CpG",
         "outputId": "dff7d872-6002-49fb-ab4b-277c527ebfe4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,13 +460,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "PfR0wRD-SAE4",
         "outputId": "96c21bf2-0af9-4f41-f657-b865a4c98306"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +872,7 @@
         "id": "qbZeGlgWF-mm",
         "outputId": "e6c14133-5aab-411c-aa2e-b9bcfeb239c1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +918,7 @@
         "id": "33tj2EhgGvth",
         "outputId": "6a6aeaab-29fe-4d1c-e4df-f81de7788834"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,13 +944,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 81
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pCe-oUPZHATt",
         "outputId": "d7dda695-425d-4ca9-ef30-20e0f5df598f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1173,7 +1182,7 @@
         "id": "wN_f8gte9qnd",
         "outputId": "acfbf79d-a208-4189-f3bd-f542dc5dbd8f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1205,13 +1214,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 424
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rDLoJB2QO4O1",
         "outputId": "a1b3fbdf-da8d-4e08-ce26-9d7c9ddeed68"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1636,13 +1644,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 482
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pKfgNLCxSyKD",
         "outputId": "5cd49bff-6ee7-4a75-d09f-868c1955a2e6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1690,13 +1697,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 460
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9DiQUnFAT6fB",
         "outputId": "d66ec4c7-e621-44c9-a0f8-659472f1ba84"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1719,13 +1725,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "10Z4nnlG-1Uc",
         "outputId": "6665a313-9c12-4b4c-9027-cbe06c249f01"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2014,7 +2019,7 @@
       "metadata": {
         "id": "IrgP16by_jvE"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2024,13 +2029,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "C5Jt8zrTPG-f",
         "outputId": "d0c3e6a1-7bd9-4dff-df98-aa4eebf586c9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2322,7 +2326,7 @@
         "id": "MF7bAorm_xYE",
         "outputId": "5d900a12-bd00-4151-bc2b-b0b18e0968ec"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2361,7 +2365,7 @@
         "id": "Vi54sdhjPhTu",
         "outputId": "74519550-abc4-483d-9686-4e1f0ca6f899"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2393,7 +2397,7 @@
         "id": "5ZIsXA1EPLmp",
         "outputId": "4253245d-d3d6-4ab6-9f74-fd15df775fbc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2431,7 +2435,7 @@
         "id": "YmwWPQjSPtaa",
         "outputId": "82e34204-9857-4b6b-ea16-ce7b94caa5d1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2469,7 +2473,7 @@
         },
         "outputId": "7f78a969-f36f-4733-b1b1-13e3ca9fabdc"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2507,7 +2511,7 @@
         "id": "6SRPVpDkBwWM",
         "outputId": "5cd0dc54-69d0-496c-d3d8-f6d29ed9b2f3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2550,7 +2554,7 @@
       "metadata": {
         "id": "hHTHpnHWBvmp"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2576,7 +2580,7 @@
         "id": "KLquPx6MBxJE",
         "outputId": "6cd247a2-8f4d-42a6-d09e-9ae916e5be87"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2596,13 +2600,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "r0RZP659iioP",
         "outputId": "c0df0301-6053-45f4-a84e-a769a7ce771d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2632,7 +2635,7 @@
         "id": "TteQmuoviR4M",
         "outputId": "fe79f19e-72f4-45ac-b885-8b765eef0819"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2655,7 +2658,7 @@
         "id": "InXeZws9ixsy",
         "outputId": "4eb982c9-b428-44bd-a835-eba7c7ef95e6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2719,7 +2722,7 @@
       "metadata": {
         "id": "SkA-6DeqCIYM"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2729,13 +2732,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LWcXL7VBCn-T",
         "outputId": "b07ec9b5-c1b9-4517-9ebd-5bbf7018d994"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2764,7 +2766,7 @@
         "id": "eR56sRZaC8pk",
         "outputId": "1bd947ad-e036-479e-d61a-ba42e009a20c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2804,7 +2806,7 @@
         "id": "V6bExDgSC-Y0",
         "outputId": "ca100238-5aa3-4e38-d86a-d9d1446f475f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2837,7 +2839,7 @@
         "id": "N3oap2zTEpqj",
         "outputId": "d74cc6e9-ba7a-4084-967f-688f8a8f1e90"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2864,7 +2866,7 @@
         "id": "BjvfeRejIvYT",
         "outputId": "1b9c95da-93f6-4303-808d-33143b2b4c1a"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2891,13 +2893,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "z06jdjJSIwrk",
         "outputId": "d1759801-90c0-45ce-9706-4e85aa9cd6bf"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2926,7 +2927,7 @@
         "id": "E7veYAX_I3WD",
         "outputId": "5992a95b-87b3-4841-be45-1329745d6dea"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2956,7 +2957,7 @@
         "id": "8uwgMpewI4XL",
         "outputId": "148de1ac-1762-421a-c4c3-28f6044684af"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2988,7 +2989,7 @@
         "id": "JFtpw1uUI6Tb",
         "outputId": "2d21e207-db75-4fe7-93f4-622cd6c162bf"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3011,7 +3012,7 @@
         "id": "vkwuHsY5I-rz",
         "outputId": "1248663c-fc18-42fd-b2ca-59e47b5f6b15"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3031,7 +3032,7 @@
       "metadata": {
         "id": "sj5NxqBZI_m7"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3047,7 +3048,7 @@
         "id": "vDzYdNRaJApT",
         "outputId": "589bfc81-d012-4d25-9830-9b51616618d7"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3108,7 +3109,7 @@
       "metadata": {
         "id": "Qf871coeJCL7"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3126,7 +3127,7 @@
       "metadata": {
         "id": "jU4hfQvSJDwU"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3136,13 +3137,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "o93rufQmJZsP",
         "outputId": "654a52ff-b64a-4cea-b75f-178e7ecdce39"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3397,13 +3397,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "y8qN6f_So0Bj",
         "outputId": "0058d1fc-fe4c-4a14-e05e-87cdc3102ee8"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3659,13 +3658,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
+          "base_uri": "https://localhost:8080/"
         },
         "id": "shmCh6J2JZ77",
         "outputId": "8925e963-e83e-4854-a50b-17bccaa41e3a"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3892,13 +3890,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jinX137KqoFE",
         "outputId": "4bcfa1f8-d888-4e04-d6df-1ab343dd6d47"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4129,7 +4126,7 @@
         "id": "eFhUE6-7Jrj8",
         "outputId": "7f2b0734-ce06-4a10-c619-ac9ab9cac91f"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4267,7 +4264,7 @@
         "id": "FC0LIsAIL8m7",
         "outputId": "93d48303-6670-477c-8f66-98fc843afd51"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4312,7 +4309,7 @@
       "metadata": {
         "id": "ACzWjdJ2MNd0"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4330,7 +4327,7 @@
         "id": "C855MQoSNdiT",
         "outputId": "d76aea34-2247-4157-9171-5d79b7cc4dbe"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4363,7 +4360,7 @@
         "id": "7dVeh9JWNfAU",
         "outputId": "ad4d6914-6491-4247-b67d-14e380a9eafa"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4488,13 +4485,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
+          "base_uri": "https://localhost:8080/"
         },
         "id": "PNzbF7gxNi6b",
         "outputId": "7399ec9e-10d8-4145-f5f7-4243038022b8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4793,13 +4789,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "VgVgkThUNlBj",
         "outputId": "aabc5ba4-a1f5-4b33-e1bc-254db8bb8af8"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5027,13 +5022,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "h48KRAluNoOb",
         "outputId": "7581c40b-c470-4317-a829-93d88227a06f"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5512,13 +5506,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "SkKFqaFhNp6L",
         "outputId": "ce5e8bac-8782-4fc2-bba0-1cfb8b52e039"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
